@@ -331,6 +331,9 @@ div.CPfoot{
 	padding: 10px 0 0 50px;
 	border-bottom: 3px solid #000000;
 }
+#modlogo {
+	float: left;
+}
 #nav-change-language {
 	float: right;
 	padding-top: 5px;
