@@ -46,7 +46,7 @@
 <div id="xo-canvas"<{if $columns_layout}> class="<{$columns_layout}>"<{/if}>>
 	<!-- Header -->
     <div id="xo-header">
-	    <div id="xo-headerlogo"><a href="<{xoAppUrl /}>" title=""><img src="<{xoImgUrl img/logo.png}>" alt="<{$xoops_sitename}>" /></a></div>
+	    <div id="xo-headerlogo"><a href="<{xoAppUrl /}>" title=""><img src="<{xoImgUrl img/logo_rtl.png}>" alt="<{$xoops_sitename}>" /></a></div>
 	    <div id="xo-headerbanner"><{$xoops_banner}></div>
     </div>
 	<!-- Header menu (optional) -->
@@ -102,7 +102,7 @@
 	</div>
 	<!-- Footer -->
 	<div id="xo-footer">
-		<a href="http://www.impresscms.org/" title=""><img src="<{xoImgUrl img/poweredby.gif}>" alt="ImpressCMS" /></a>
+		<a href="http://www.impresscms.org/" title=""><img src="<{xoImgUrl img/poweredby_rtl.gif}>" alt="ImpressCMS" /></a>
 	</div>
 </div>
 <{$xoops_google_analytics}>
