@@ -81,6 +81,7 @@ Unreleased : ImpressCMS 1.1 "???" Alpha
 - Improved : New smartiy variables on themes for "google analytics code" and "google meta tag". (stranger)
 - Improved : Changing fiih link (after upgrading) to a new place for updating system module, right after upgrading is done. (stranger)
 - Improved : Added theme_rtl.html to all themes. (stranger)
+- Improved : Admin templates to use their style from style files, to make icms more compatible with rtl languages. (stranger)
 
 - Changed : Moved the Smarty library from /class to /libraries. (nekro)
 - Changed : Moved the PHPmailer library from /class to /libraries. (nekro)
